[project]
name = "suncoast-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "langchain-core>=0.3.83",
    "langchain-ollama>=0.3.10",
    "langgraph>=0.6.11",
    "pydantic>=2.12.5",
    "streamlit>=1.50.0",
    "uvicorn>=0.39.0",
]
